# aiproxy

./: README.md  pyproject.toml  requirements-dev.txt
src/: test.py
src/aiproxy/: __init__.py
src/aiproxy/data/: __init__.py  azure_search_config.py  chat_chunk.py  chat_config.py  chat_context.py  chat_message.py  chat_response.py  cosmosdb_config.py
src/aiproxy/functions/: __init__.py  ai_chat.py  azure_search.py  code.py  cosmosdb.py  dates.py  function_registry.py  maths_functions.py  object_functions.py  string_functions.py  url_functions.py
src/aiproxy/history/: __init__.py  cosmos_history_provider.py  file_history_provider.py  map_history_provider.py
src/aiproxy/interfaces/: __init__.py  abstract_history_provider.py  abstract_streamer.py  function_def.py
src/aiproxy/orchestration/: __init__.py  agent.py  agent_orchestrator.py  agent_select_orchestrator.py  assistant_orchestrator.py  consensus_orchestrator.py  image_orchestrator.py  multi_agent_orchestrator.py  sequential_agent_orchestrator.py  step_plan_orchestrator.py
src/aiproxy/proxy/: __init__.py  abstract_proxy.py  assistant_proxy.py  completions_extensions_adapter.py  completions_proxy.py  embedding_proxy.py  proxy_registry.py
src/aiproxy/streaming/: __init__.py  (+4 more)
test/: test.py
test/tests/: test_assistant_proxy.py  test_code_function.py  test_completions_proxy.py  test_configured_consensus_orchestrator.py  test_configured_orchestrator.py  test_image_agent.py  test_select_agent_orchestrator.py  test_step_plan_orchestrator.py  test_step_plan_orchestrator_card_response.py  test_url_load.py
(+19 files in other folders)
